# otto-mcu-communicator

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: utils.cmake
data/: state.json
src/: CMakeLists.txt  client.cpp  main.cpp  main_threadful.cpp
src/app/: controller.cpp  controller.hpp  mcu_port.hpp
src/app/engines/synths/nuke/: audio.cpp  mod_screen.cpp  widgets.hpp
src/lib/: domain_socket.cpp  domain_socket.hpp  i2c.cpp  i2c.hpp  socket_pool.cpp  socket_pool.hpp  utility.hpp
src/lib/dsp/: moog_components.hpp
src/lib/voices/: voice_manager.hpp
